# motion_monitor

./: .gitignore  data.py  test.py  test_opencv.py
Terminal_AIR720UH_code/: .mxproject  CMakeLists.txt  Terminal_AIR720UH_code.ioc
Terminal_AIR720UH_code/Inc/: main.h  stm32l4xx_it.h  usart.h
Terminal_AIR720UH_code/MyCode/Inc/: air720sl.h  algorithm.h  bt02.h  commu.h  delay.h  gps.h  icm20689.h  logic_app.h  low_power.h  myadc.h  myiic.h  myiwdg.h  myrtc.h  mytim.h  myusart.h  spi_flash.h  stmflash.h
Terminal_AIR720UH_code/MyCode/Src/: air720sl.c  algorithm.c  bt02.c  commu.c  dataServer.cpp  dataServer.h  delay.c  gps.c  icm20689.c  logic_app.c  low_power.c  myadc.c  myiic.c  myiwdg.c  myrtc.c  mytim.c  myusart.c  spi_flash.c  stmflash.c
Terminal_AIR720UH_code/Src/: adc.c  gpio.c  i2c.c  iwdg.c  main.c  rtc.c  spi.c  stm32l4xx_it.c  system_stm32l4xx.c  tim.c  usart.c
